Nova branch para implementar MVVM no projeto

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -27,21 +25,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#FFFFFF"
-                android:text="Buscar:" />
+                android:text="@string/search" />
+
             <EditText
                 android:id="@+id/etBuscar"
-                android:layout_marginLeft="16dp"
-                android:textColor="#FFFFFF"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+                android:layout_marginLeft="16dp"
+                android:layout_weight="1"
+                android:minHeight="48dp"
+                android:textColor="#FFFFFF"
+                android:autofillHints=""
+                android:inputType="text" />
             <ImageView
                 android:id="@+id/ivBuscar"
                 android:layout_marginLeft="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
-                android:src="@android:drawable/ic_search_category_default" />
+                android:src="@android:drawable/ic_search_category_default"
+                android:focusable="true"
+                android:contentDescription="TODO" />
         </LinearLayout>
         <FrameLayout
             android:layout_width="match_parent"
